# libbmp

./: CMakeLists.txt  install.bat  libbmp.bat  libbmp.pc.in
PHP/: libbmp.php
Qt/: libbmp.pro
include/: libbmp.hpp
projects/: index.xml
scripts/: install.bat  x64.bat  x86.bat
src/: bmp.cpp
